data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1021.wast
;; 2. **Test Description:**    - Design a module with a `loop` that takes a float value, but the `br` instruction supplies an integer value, which could be caused by a type mismatch in operand stack management.    - **Constraint Check:** This test ensures backward branches to a `loop` correctly handle the operand types required by the input type of the loop.    - **Differential Behavior:** Incorrect handling in Wizard Engine might not catch this type mismatch, leading to unexpected behavior, whereas WebAssembly should prevent execution with a type mismatch error.

(assert_invalid
  (module
    (func
      (loop (param f32)
        (br 0 (i32.const 42))
      )
    )
  )
  "type mismatch"
)